                     CHANGES version 5.35.3

           This file summarizes changes made since 5.0

Version 5.35.3

Fixed: Issue #1129: If Monit is running as init process (PID=1), disable the "View Monit logfile" functionality.


Version 5.35.2

Fixed: Monit may skip the sleep altogether and perform checks in a tight loop when many "check program" tests are used in conjunction with the short poll cycle.


Version 5.35.1

Fixed: Issue #1127: Monit may crash when "check program" is used.


Version 5.35.0

Fixed: Monit may hang on exit, if a program executed by "check program" was pending while monit tried to quit (regression from Monit 5.34.1).

Fixed: Issue #484: The pidfile based process check may not work properly on platforms that assign PID to threads (LWPs), such as Linux. When the process with
       the given PID stopped, but the same PID was assigned to the LWP, Monit reported the process as running (which is wrong) and logged the following error:
           "failed to get service data"
       The service status displayed the process as OK but showed no process statictics.

Fixed: When the pidfile was updated (e.g. process restarted), Monit was still monitoring the previous PID. If the PID was reassigned to different process or thread (LWP),
       Monit wasn't able to detect that the process is not running.

Fixed: Issue #1115: Service checks may sporadicaly hang if the PID is recycled by the system quickly, e.g. due to PID randomization (regression from Monit 5.34.1).

Fixed: Issue #1121: The "set mailserver" timeout option allowed to only increase the network timeout. Values lower then 30 seconds were ignored.

Fixed: Issue #1122: Monit hangs with high CPU usage if the "set daemon <seconds>" is set to >= 2148 seconds.

Fixed: Issue #1126: Monit with LibreSSL: The secure connection shutdown may hog the CPU for up to connection timeout (5s by default).
